<resources>
    <string name="app_name">Knight GO</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_no_bluetooth">No Bluetooth adapter detected.</string>
    <string name="text_wait">Waiting...</string>
    <string name="okay">Okay</string>
    <string name="explore">Explore</string>
    <string name="battle">Battle</string>
    <string name="how_to_play">How To Play</string>
    <string name="battle_start">Find a Battleground</string>
    <string name="battle_wait">Host a Battleground</string>
    <string name="title_activity_formation">FormationActivity</string>
    <string-array name="knight_types">
        <item>None</item>
        <item>Shield</item>
        <item>Bow</item>
        <item>Crossbow</item>
        <item>Spear</item>
        <item>Sword</item>
        <item>Axe</item>
        <item>Mace</item>
        <item>Dagger</item>
        <item>Halberd</item>
        <item>Pegasus</item>
    </string-array>
</resources>
