<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucf.knightgo.BluetoothActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_wait"
        android:id="@+id/button_wait"
        android:onClick="waitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_discovered"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_find"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_start"
        android:id="@+id/button_find"
        android:onClick="searchButton"
        android:layout_above="@+id/button_wait"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/text_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_waiting"
        android:layout_alignBaseline="@+id/button_wait"
        android:layout_alignBottom="@+id/button_wait"
        android:layout_toStartOf="@+id/button_wait"
        android:layout_marginEnd="11dp"
        android:visibility="gone" />

</RelativeLayout>
