<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mainmenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucf.knightgo.MainMenu"
    android:background="@android:color/background_dark">

    <Button
        android:text="@string/battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/battle_button"
        android:layout_below="@+id/explore_button"
        android:layout_alignStart="@+id/explore_button"
        android:onClick="openBattle"
        android:layout_alignEnd="@+id/tutorial_button" />

    <Button
        android:text="@string/explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explore_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:elevation="0dp"
        android:onClick="openMap"
        android:layout_alignStart="@+id/tutorial_button"
        android:layout_alignEnd="@+id/tutorial_button" />

    <Button
        android:text="@string/how_to_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/tutorial_button"
        android:onClick="openTutorial"
        android:layout_below="@+id/battle_button"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/knight_go_logo"
        android:id="@+id/imageView3"
        android:layout_above="@+id/explore_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp" />
</RelativeLayout>
